:sparkles: [#10] added index delete endpoints and celery tasks
